Updated extensions init notebooks plus some relocations

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sandbox_config.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sandbox_config.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ./access_store_ui.ipynb\n",
+    "%run utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui())"
    ]
   },
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ./sandbox_config_ui.ipynb\n",
+    "%run utils/sandbox_config_ui.ipynb\n",
     "display(get_sandbox_config_ui())"
    ]
   },
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d18f4f90-3b87-4f69-8e67-6c2e9e37085e",
+   "id": "8bde4466-fc3c-481f-b880-e4ffabb29656",
    "metadata": {},
    "outputs": [],
    "source": []
