--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/sandbox_config_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/sandbox_config_ui.ipynb
@@ -17,7 +17,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ./sandbox_ui_styles.ipynb"
+    "from exasol.utils import upward_file_search\n",
+    "\n",
+    "# This NB may be running from various locations in the NB hierarchy.\n",
+    "# Need to search for the styles NB from the current directory upwards.\n",
+    "\n",
+    "%run {upward_file_search('utils/sandbox_ui_styles.ipynb')}"
    ]
   },
   {
@@ -35,7 +40,7 @@
     "    db_schema = 'SCHEMA'\n",
     "    db_user = 'USER'\n",
     "    db_password = 'PASSWORD'\n",
-    "    encryption = 'ENCRYPTION'\n",
+    "    db_encryption = 'ENCRYPTION'\n",
     "    cert_vld = 'CERTIFICATE_VALIDATION'\n",
     "    trusted_ca = 'TRUSTED_CA'\n",
     "    client_cert = 'CLIENT_CERTIFICATE'\n",
@@ -45,6 +50,7 @@
     "    bfs_bucket = 'BUCKETFS_BUCKET'\n",
     "    bfs_user = 'BUCKETFS_USER'\n",
     "    bfs_password = 'BUCKETFS_PASSWORD'\n",
+    "    bfs_encryption = 'BUCKETFS_ENCRYPTION'\n",
     "\n",
     "def get_sandbox_config_ui():\n",
     "\n",
@@ -60,18 +66,20 @@
     "            ('Port', widgets.IntText(value=int(sb_config.get(Cfg.db_port.value, '8888'))), Cfg.db_port),\n",
     "            ('User Name', widgets.Text(value=sb_config.get(Cfg.db_user.value)), Cfg.db_user),\n",
     "            ('Password', widgets.Password(value=sb_config.get(Cfg.db_password.value)), Cfg.db_password),\n",
-    "            ('Default Schema', widgets.Text(value=sb_config.get(Cfg.db_schema.value, 'IDA')), Cfg.db_schema)\n",
+    "            ('Default Schema', widgets.Text(value=sb_config.get(Cfg.db_schema.value, 'IDA')), Cfg.db_schema),\n",
+    "            ('Encrypted Comm.', widgets.Checkbox(value=sb_config.get(Cfg.db_encryption.value, 'True') == 'True', indent=False),\n",
+    "                Cfg.db_encryption)\n",
     "        ],\n",
     "        [\n",
     "            ('Port', widgets.IntText(value=int(sb_config.get(Cfg.bfs_port.value, '6666'))), Cfg.bfs_port),\n",
     "            ('User Name', widgets.Text(value=sb_config.get(Cfg.bfs_user.value)), Cfg.bfs_user),\n",
     "            ('Password', widgets.Password(value=sb_config.get(Cfg.bfs_password.value)), Cfg.bfs_password),\n",
     "            ('Service Name', widgets.Text(value=sb_config.get(Cfg.bfs_service.value, 'bfsdefault')), Cfg.bfs_service),\n",
-    "            ('Bucket Name', widgets.Text(value=sb_config.get(Cfg.bfs_bucket.value, 'default')), Cfg.bfs_bucket)\n",
+    "            ('Bucket Name', widgets.Text(value=sb_config.get(Cfg.bfs_bucket.value, 'default')), Cfg.bfs_bucket),\n",
+    "            ('Encrypted Comm.', widgets.Checkbox(value=sb_config.get(Cfg.bfs_encryption.value, 'True') == 'True', indent=False),\n",
+    "                Cfg.bfs_encryption)\n",
     "        ],\n",
     "        [\n",
-    "            ('Use Encryption', widgets.Checkbox(value=sb_config.get(Cfg.encryption.value, 'True') == 'True', indent=False),\n",
-    "                Cfg.encryption),\n",
     "            ('Validate Certificate', widgets.Checkbox(value=sb_config.get(Cfg.cert_vld.value, 'True') == 'True', indent=False),\n",
     "                Cfg.cert_vld),\n",
     "            ('Trusted CA File/Dir', widgets.Text(value=sb_config.get(Cfg.trusted_ca.value)), Cfg.trusted_ca),\n",
