--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_deploy_model.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_deploy_model.ipynb
@@ -33,31 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ../access_store_ui.ipynb\n",
+    "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "edba16c9-cd48-4075-8f7d-d6179dc011a8",
-   "metadata": {},
-   "source": [
-    "### Other variables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66f3ee9a-5887-4516-b785-7f3791ec63e5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "EXTERNAL_HOST = f\"{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}\"\n",
-    "\n",
-    "WEBSOCKET_URL = f\"exa+websocket://{sb_config.USER}:{sb_config.PASSWORD}\" \\\n",
-    "    f\"@{EXTERNAL_HOST}/{sb_config.SCHEMA}?SSLCertificate=SSL_VERIFY_NONE\"\n",
-    "\n",
-    "S3_BUCKET_URI=f\"s3://{sb_config.AWS_BUCKET}\""
    ]
   },
   {
@@ -75,12 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sqlalchemy import create_engine\n",
-    "\n",
-    "engine = create_engine(WEBSOCKET_URL)\n",
-    "\n",
-    "%load_ext sql\n",
-    "%sql engine"
+    "%run ../utils/jupysql_init.ipynb"
    ]
   },
   {
@@ -92,7 +64,7 @@
     "\n",
     "The script below deploys the best candidate model of the trained Autopilot job to an endpoint with a specified name. The deployment SQL command additionally generates the prediction UDF script with the same name. This UDF can be used for making predictions in an SQL statement.\n",
     "\n",
-    "<img src=\"./sme_deployment.png\"/>\n",
+    "<img src=\"utils/sme_deployment.png\"/>\n",
     "<center>Model deployment</center>\n",
     "\n",
     "Let's define some variables."
@@ -109,7 +81,7 @@
     "ENDPOINT_NAME = \"APSPredictor\"\n",
     "\n",
     "# The EC2 instance type of the endpoint to deploy the Autopilot model to.\n",
-    "INSTANCE_TYPE = \"ml.t3.medium\"\n",
+    "INSTANCE_TYPE = \"ml.m5.large\"\n",
     "\n",
     "# The initial number of instances to run the endpoint on.\n",
     "INSTANCE_COUNT = 1\n",
@@ -135,7 +107,7 @@
     "    '{{sb_config.SCHEMA}}',\n",
     "    '{{INSTANCE_TYPE}}',  \n",
     "    {{INSTANCE_COUNT}}, \n",
-    "    '{{sb_config.AWS_CONN}}', \n",
+    "    '{{sb_config.SME_AWS_CONN}}', \n",
     "    '{{sb_config.AWS_REGION}}'\n",
     ");"
    ]
@@ -270,7 +242,7 @@
     "%%sql\n",
     "EXECUTE SCRIPT SME_DELETE_SAGEMAKER_AUTOPILOT_ENDPOINT(\n",
     "    '{{ENDPOINT_NAME}}', \n",
-    "    '{{sb_config.AWS_CONN}}', \n",
+    "    '{{sb_config.SME_AWS_CONN}}', \n",
     "    '{{sb_config.AWS_REGION}}'\n",
     ")"
    ]
