--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_train_model.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_train_model.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ../access_store_ui.ipynb\n",
+    "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
    ]
   },
@@ -60,29 +60,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0de9c8ec-5abb-43dd-b32d-a676e0e2a2c6",
-   "metadata": {},
-   "source": [
-    "### Other variables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f7b9be4-85ad-46f7-b0a2-51a026856de6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "EXTERNAL_HOST = f\"{sb_config.EXTERNAL_HOST_NAME}:{sb_config.HOST_PORT}\"\n",
-    "\n",
-    "WEBSOCKET_URL = f\"exa+websocket://{sb_config.USER}:{sb_config.PASSWORD}\" \\\n",
-    "    f\"@{EXTERNAL_HOST}/{sb_config.SCHEMA}?SSLCertificate=SSL_VERIFY_NONE\"\n",
-    "\n",
-    "S3_BUCKET_URI=f\"s3://{sb_config.AWS_BUCKET}\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "f5e952b4-8724-46f9-a15a-7de2f306883f",
    "metadata": {},
    "source": [
@@ -96,12 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sqlalchemy import create_engine\n",
-    "\n",
-    "engine = create_engine(WEBSOCKET_URL)\n",
-    "\n",
-    "%load_ext sql\n",
-    "%sql engine"
+    "%run ../utils/jupysql_init.ipynb"
    ]
   },
   {
@@ -124,6 +96,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# URI of the S3 bucket\n",
+    "S3_BUCKET_URI=f\"s3://{sb_config.AWS_BUCKET}\"\n",
+    "\n",
     "# Path in the S3 bucket where the input data will be uploaded.\n",
     "S3_OUTPUT_PATH = \"ida_dataset_path\"\n",
     "\n",
@@ -206,7 +181,7 @@
     "\n",
     "The script below exports the data to the AWS S3 bucket. This export operation is highly efficient, as it is performed in parallel. After that it calls Amazon SageMaker Autopilot, which automatically performs an end-to-end machine learning development, to build a model. The script doesn't wait till the training is completed. That may take a while. The next script will allow us to monitor the progress of the Autopilot training pipeline.\n",
     "\n",
-    "<img src=\"./sme_training.png\"/>\n",
+    "<img src=\"utils/sme_training.png\"/>\n",
     "<center>Model training with Autopilot</center>"
    ]
   },
@@ -231,7 +206,7 @@
     "EXECUTE SCRIPT \"{{sb_config.SCHEMA}}\".\"SME_TRAIN_WITH_SAGEMAKER_AUTOPILOT\"(\n",
     "'{\n",
     "    \"job_name\"                          : \"{{sb_config.JOB_NAME}}\",\n",
-    "    \"aws_credentials_connection_name\"   : \"{{sb_config.AWS_CONN}}\",\n",
+    "    \"aws_credentials_connection_name\"   : \"{{sb_config.SME_AWS_CONN}}\",\n",
     "    \"aws_region\"                        : \"{{sb_config.AWS_REGION}}\",\n",
     "    \"iam_sagemaker_role\"                : \"{{sb_config.AWS_ROLE}}\",\n",
     "    \"s3_bucket_uri\"                     : \"{{S3_BUCKET_URI}}\",\n",
@@ -282,7 +257,7 @@
     "%%sql\n",
     "EXECUTE SCRIPT {{sb_config.get(\"SCHEMA\")}}.\"SME_POLL_SAGEMAKER_AUTOPILOT_JOB_STATUS\"(\n",
     "    '{{sb_config.JOB_NAME}}',\n",
-    "    '{{sb_config.AWS_CONN}}',\n",
+    "    '{{sb_config.SME_AWS_CONN}}',\n",
     "    '{{sb_config.AWS_REGION}}'\n",
     ")"
    ]
@@ -349,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe278a56-151c-42e3-bc0c-24bf739ffc62",
+   "id": "eec818e0-2fd9-4744-9c56-953e335850f1",
    "metadata": {},
    "outputs": [],
    "source": []
