Added ITDE start/stop plus some refactoring

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/utils/te_init_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/utils/te_init_ui.ipynb
@@ -20,9 +20,9 @@
     "from exasol.utils import upward_file_search\n",
     "\n",
     "# This NB may be running from various locations in the NB hierarchy.\n",
-    "# Need to search for the styles NB from the current directory upwards.\n",
+    "# Need to search for other supporting NBs from the current directory upwards.\n",
     "\n",
-    "%run {upward_file_search('utils/sandbox_ui_styles.ipynb')}"
+    "%run {upward_file_search('utils/generic_config_ui.ipynb')}"
    ]
   },
   {
@@ -32,28 +32,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_te_config_ui():\n",
+    "import ipywidgets as widgets\n",
     "\n",
-    "    import ipywidgets as widgets\n",
     "\n",
-    "    ui_look = get_config_styles()\n",
+    "def get_te_config_ui() -> widgets.Widget:\n",
+    "\n",
     "    token_key = 'HF_TOKEN'\n",
     "\n",
-    "    header_lbl = widgets.Label(value='Huggingface Access Parameters', style=ui_look.header_style, layout=ui_look.header_layout)\n",
-    "    token_hdr = widgets.Label(value='Access token', style=ui_look.label_style, layout=ui_look.label_layout)\n",
-    "    token_inp = widgets.Password(value=sb_config.get(token_key), style = ui_look.input_style, layout=ui_look.input_layout)\n",
-    "    save_btn = widgets.Button(description='Save', style=ui_look.button_style, layout=ui_look.button_layout)\n",
+    "    inputs = [\n",
+    "        ('Access token', widgets.Password(value=sb_config.get(token_key)), token_key)\n",
+    "    ]\n",
     "\n",
-    "    def save_configuration(btn):\n",
-    "        sb_config.save(token_key, token_inp.value)\n",
-    "        save_btn.icon = 'check'\n",
-    "\n",
-    "    save_btn.on_click(save_configuration)\n",
-    "\n",
-    "    group_items = [header_lbl, widgets.Box([token_hdr, token_inp], layout=ui_look.row_layout)]\n",
-    "    items = [widgets.Box(group_items, layout=ui_look.group_layout), save_btn]\n",
-    "    ui = widgets.Box(items, layout=ui_look.outer_layout)\n",
-    "    return ui"
+    "    return get_generic_config_ui(sb_config, [inputs], ['Huggingface Access Parameters'])\n"
    ]
   }
  ],
