--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/utils/sme_init_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/utils/sme_init_ui.ipynb
@@ -20,9 +20,9 @@
     "from exasol.utils import upward_file_search\n",
     "\n",
     "# This NB may be running from various locations in the NB hierarchy.\n",
-    "# Need to search for the styles NB from the current directory upwards.\n",
+    "# Need to search for other supporting NBs from the current directory upwards.\n",
     "\n",
-    "%run {upward_file_search('utils/sandbox_ui_styles.ipynb')}"
+    "%run {upward_file_search('utils/generic_config_ui.ipynb')}"
    ]
   },
   {
@@ -33,7 +33,9 @@
    "outputs": [],
    "source": [
     "from enum import Enum\n",
-    "    \n",
+    "import ipywidgets as widgets\n",
+    "\n",
+    "\n",
     "class ExasolAWSConfig(Enum):\n",
     "    # AWS access credentials\n",
     "    key_id = 'AWS_ACCESS_KEY_ID'\n",
@@ -43,44 +45,19 @@
     "    # S3 bucket, which must exist\n",
     "    bucket = 'AWS_BUCKET'\n",
     "\n",
-    "def get_sme_config_ui():\n",
     "\n",
-    "    import ipywidgets as widgets\n",
-    "\n",
-    "    ui_look = get_config_styles()\n",
+    "def get_sme_config_ui() -> widgets.Widget:\n",
     "\n",
     "    Cfg = ExasolAWSConfig\n",
     "    inputs = [\n",
-    "        ('Access Key ID', widgets.Password(value=sb_config.get(Cfg.key_id.value)), Cfg.key_id),\n",
-    "        ('Secret Access Key', widgets.Password(value=sb_config.get(Cfg.secret_key.value)), Cfg.secret_key),\n",
-    "        ('Region', widgets.Text(value=sb_config.get(Cfg.region.value)), Cfg.region),\n",
-    "        ('Role', widgets.Text(value=sb_config.get(Cfg.role.value)), Cfg.role),\n",
-    "        ('S3 Bucket', widgets.Text(value=sb_config.get(Cfg.bucket.value)), Cfg.bucket),\n",
+    "        ('Access Key ID', widgets.Password(value=sb_config.get(Cfg.key_id.value)), Cfg.key_id.value),\n",
+    "        ('Secret Access Key', widgets.Password(value=sb_config.get(Cfg.secret_key.value)), Cfg.secret_key.value),\n",
+    "        ('Region', widgets.Text(value=sb_config.get(Cfg.region.value)), Cfg.region.value),\n",
+    "        ('Role', widgets.Text(value=sb_config.get(Cfg.role.value)), Cfg.role.value),\n",
+    "        ('S3 Bucket', widgets.Text(value=sb_config.get(Cfg.bucket.value)), Cfg.bucket.value),\n",
     "    ]\n",
     "\n",
-    "    header_lbl = widgets.Label(value='AWS Access Parameters', style=ui_look.header_style, layout=ui_look.header_layout)\n",
-    "    save_btn = widgets.Button(description='Save', style=ui_look.button_style, layout=ui_look.button_layout)\n",
-    "\n",
-    "    def save_configuration(btn):\n",
-    "        for row in inputs:\n",
-    "            _, widget, key = row\n",
-    "            sb_config.save(key.value, widget.value)\n",
-    "        save_btn.icon = 'check'\n",
-    "\n",
-    "    save_btn.on_click(save_configuration)\n",
-    "\n",
-    "    # Apply the styles and layouts\n",
-    "    for row in inputs:\n",
-    "        widget = row[1]\n",
-    "        widget.style = ui_look.input_style\n",
-    "        widget.layout = ui_look.input_layout\n",
-    "    group_items = [header_lbl]\n",
-    "    for row in inputs:\n",
-    "        group_items.append(widgets.Box([widgets.Label(value=row[0], style=ui_look.label_style, layout=ui_look.label_layout), \n",
-    "                                        row[1]], layout=ui_look.row_layout))\n",
-    "    items = [widgets.Box(group_items, layout=ui_look.group_layout), save_btn]\n",
-    "    ui = widgets.Box(items, layout=ui_look.outer_layout)\n",
-    "    return ui"
+    "    return get_generic_config_ui(sb_config, [inputs], ['AWS Access Parameters'])\n"
    ]
   }
  ],
