Refactor cloud-storage-extension notebook for new functions in notebook-connect (#114)
* Refactor notebook for new functions

* Remove comment

* Clear output

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/01_import_data.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud/01_import_data.ipynb
@@ -2,41 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2023-11-03T13:36:38.270863Z",
-     "start_time": "2023-11-03T13:36:37.828187Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Schema created in 17.11ms\n",
-      "Jar for version 2.7.6 already exists in exasol-cloud-storage-extension-2.7.6.jar, skip downloading\n",
-      "Jar file is already present in the bucketfs\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "%run ../setup_db.ipynb\n",
-    "conf = SandboxConfig(EXTERNAL_HOST_NAME=\"127.0.0.1\", HOST_PORT=8563, BUCKETFS_PORT=2580)\n",
-    "setup_schema(conf)\n",
-    "\n",
-    "%run 00_setup.ipynb\n",
-    "setup_cloud_storage_extension(conf)"
-   ]
+    "%run ../cloud_store_config.ipynb"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a3e09393f1b792f2"
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "import pyexasol"
+    "import pyexasol\n",
+    "from exasol.connections import open_pyexasol_connection"
    ],
    "metadata": {
     "collapsed": false,
@@ -117,9 +99,9 @@
     ")\n",
     "\"\"\"\n",
     "\n",
-    "with pyexasol.connect(**conf.connection_params) as conn:\n",
+    "with open_pyexasol_connection(sb_config) as conn:\n",
     "    conn.execute(sql, query_params={\n",
-    "        \"schema_name\": conf.SCHEMA,\n",
+    "        \"schema_name\": sb_config.SCHEMA,\n",
     "        \"table_name\": TABLE_NAME\n",
     "    })"
    ],
@@ -137,9 +119,7 @@
    "source": [
     "## S3 credentials\n",
     "\n",
-    "Even if our data resides on a publicly available S3 bucket (as the data we're dealing with in this examle), we need to provide S3 credentials to access the bucket. \n",
-    "\n",
-    "TODO: we have to provide valid credentials, even for public buckets, see [this issue](https://github.com/exasol/cloud-storage-extension/issues/283)"
+    "If S3 bucket is public, we can pass empty access key and secret keys. Otherwise replace with valid credentials."
    ],
    "metadata": {
     "collapsed": false
@@ -156,12 +136,12 @@
     "IDENTIFIED BY 'S3_ACCESS_KEY={access_key!r};S3_SECRET_KEY={secret_key!r}';\n",
     "\"\"\"\n",
     "\n",
-    "S3_ACCESS_KEY = \"<ACCESS_KEY>\"\n",
-    "S3_SECRET_KEY = \"<SECRET_KEY>\"\n",
+    "S3_ACCESS_KEY = \"\"\n",
+    "S3_SECRET_KEY = \"\"\n",
     "\n",
-    "with pyexasol.connect(**conf.connection_params) as conn:\n",
+    "with open_pyexasol_connection(sb_config) as conn:\n",
     "    conn.execute(sql, query_params={\n",
-    "        \"schema\": conf.SCHEMA,\n",
+    "        \"schema\": sb_config.SCHEMA,\n",
     "        \"access_key\": S3_ACCESS_KEY,\n",
     "        \"secret_key\": S3_SECRET_KEY,\n",
     "    })"
@@ -193,7 +173,7 @@
    "outputs": [],
    "source": [
     "params = {\n",
-    "    \"schema\": conf.SCHEMA,\n",
+    "    \"schema\": sb_config.SCHEMA,\n",
     "    \"table\": TABLE_NAME,  \n",
     "}\n",
     "\n",
@@ -206,7 +186,7 @@
     "    CONNECTION_NAME = 'S3_CONNECTION';\n",
     "\"\"\"\n",
     "\n",
-    "with pyexasol.connect(**conf.connection_params) as conn:\n",
+    "with open_pyexasol_connection(sb_config) as conn:\n",
     "    conn.execute(sql, query_params=params)"
    ],
    "metadata": {
@@ -230,19 +210,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded 3862 rows\n",
-      "('2054', '401', '/m/01hrv5', 'Popcorn', 'https://en.wikipedia.org/wiki/Popcorn', 'Food & Drink', None, None, 'Popcorn is a type of corn that expands from the kernel and puffs up when heated. Popcorn is able to pop like amaranth grain, sorghum, quinoa, and millet. When heated, pressure builds within the kernel, and a small explosion is the end result. Some strains of corn are now cultivated specifically as popping corns. There are various techniques for popping corn. Along with prepackaged popcorn, which is generally intended to be prepared in a microwave oven, there are small home appliances for popping corn. These methods require the use of minimally processed popping corn. A larger-scale, commercial popcorn machine, which resembled a modern movie theater popcorn machine on a cart with large bicycle style wheels, was invented by Charles Cretors in the late 19th century. Unpopped popcorn is considered nonperishable and will last indefinitely if stored in ideal conditions. Depending on how it is prepared and cooked, some consider popcorn to be a health food, while others caution against it for a variety of reasons. Popcorn can also have non-food applications, ranging from holiday decorations to packaging materials.')\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "with pyexasol.connect(**conf.connection_params) as conn:\n",
+    "with open_pyexasol_connection(sb_config) as conn:\n",
     "    data_rows = conn.execute(\"select count(*) from {schema!i}.{table!i}\", query_params=params)\n",
     "    count = next(data_rows)[0] \n",
     "    print(f\"Loaded {count} rows\")\n",
@@ -252,11 +223,7 @@
     "    "
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-03T13:49:13.715664Z",
-     "start_time": "2023-11-03T13:49:13.662729Z"
-    }
+    "collapsed": false
    },
    "id": "a65f19ecc0ce237a"
   },
