--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/slc/script-languages.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/slc/script-languages.ipynb
@@ -125,8 +125,7 @@
       "\n",
       "Copied container to containers/python-3.8-minimal-EXASOL-6.2.0_release.tar.gz\n",
       "\n",
-      "=================================================\n",
-      "\n"
+      "=================================================\n"
      ]
     }
    ],
@@ -486,8 +485,7 @@
       "# -----------------------------------------------------------------------------------------------------\n",
       "\n",
       "# COPY flavor_customization/packages/python3_pip_packages /build_info/packages/flavor_customization\n",
-      "# ADD flavor_customization/code.tar.gz /code\n",
-      "\n"
+      "# ADD flavor_customization/code.tar.gz /code\n"
      ]
     }
    ],
@@ -621,8 +619,7 @@
       "\n",
       "Copied container to containers/python-3.8-minimal-EXASOL-6.2.0_release.tar.gz\n",
       "\n",
-      "=================================================\n",
-      "\n"
+      "=================================================\n"
      ]
     }
    ],
@@ -651,9 +648,9 @@
      "text": [
       "~/script-languages-release ~/notebooks\n",
       "total 611M\n",
-      "195M \u001b[0m\u001b[01;31mpython-3.8-minimal-EXASOL-6.2.0-release-G2EN5EEXSTDQNKBBSUJ5JF6OVOKA7VCHHZQUVHMCR3YNKKLDQ62Q.tar.gz\u001b[0m\u001b[K\n",
+      "195M \u001B[0m\u001B[01;31mpython-3.8-minimal-EXASOL-6.2.0-release-G2EN5EEXSTDQNKBBSUJ5JF6OVOKA7VCHHZQUVHMCR3YNKKLDQ62Q.tar.gz\u001B[0m\u001B[K\n",
       "4.0K python-3.8-minimal-EXASOL-6.2.0-release-G2EN5EEXSTDQNKBBSUJ5JF6OVOKA7VCHHZQUVHMCR3YNKKLDQ62Q.tar.gz.sha512sum\n",
-      "417M \u001b[01;31mpython-3.8-minimal-EXASOL-6.2.0-release-NSFG3CPFKPLAHL4PLHHPUKG3UDIFENZCN2IC4J7QS6IQACRIKREQ.tar.gz\u001b[0m\u001b[K\n",
+      "417M \u001B[01;31mpython-3.8-minimal-EXASOL-6.2.0-release-NSFG3CPFKPLAHL4PLHHPUKG3UDIFENZCN2IC4J7QS6IQACRIKREQ.tar.gz\u001B[0m\u001B[K\n",
       "4.0K python-3.8-minimal-EXASOL-6.2.0-release-NSFG3CPFKPLAHL4PLHHPUKG3UDIFENZCN2IC4J7QS6IQACRIKREQ.tar.gz.sha512sum\n"
      ]
     }
@@ -678,7 +675,7 @@
    "source": [
     "Now, that we have an updated container, we need to check if our changes were successful. For that we are going to upload the container to an Exasol Database and have a look into it. In this example, we are going to use a local Docker-DB started by `exaslct`, which uses our [integration-test-docker-environment](https://github.com/exasol/integration-test-docker-environment) in the background. \n",
     "\n",
-    "**Note:** You could also use your own Exasol Database by changing the variables below. However, this Notebook must be able to access the BucketFS of your Exasol Database or you need to manually upload the container. "
+    "**Note:** You could also use your own Exasol Database by changing the variables below. However, this Notebook must be able to access the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm) of your Exasol Database or you need to manually upload the container. "
    ]
   },
   {
@@ -787,8 +784,7 @@
       "\n",
       "ALTER SYSTEM SET SCRIPT_LANGUAGES='PYTHON3=localzmq+protobuf:///bfsdefault/default/container/python-3.8-minimal-EXASOL-6.2.0-release-current?lang=python#buckets/bfsdefault/default/container/python-3.8-minimal-EXASOL-6.2.0-release-current/exaudf/exaudfclient_py3';\n",
       "\n",
-      "=================================================\n",
-      "\n"
+      "=================================================\n"
      ]
     }
    ],
