--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformer/te_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformer/te_init.ipynb
@@ -151,7 +151,7 @@
    "metadata": {},
    "source": [
     "### BucketFS connection\n",
-    "Let's create a connection to the BucketFS where we are going to store all our models. <a href=\"https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm\" target=\"_blank\" rel=\"noopener\">BucketFS</a> is a replicated file system available in the Exasol cluster. We will use this connection hereafter in the queries.\n",
+    "Let's create a connection to the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm) where we are going to store all our models. <a href=\"https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm\" target=\"_blank\" rel=\"noopener\">BucketFS</a> is a replicated file system available in the Exasol cluster. We will use this connection hereafter in the queries.\n",
     "\n",
     "Notice that we specify a sub-directory of the bucket root, e.g. \"my_storage\" (the name can be chosen arbitrarily). The BucketFS will create this sub-directory for us the first time we use the connection."
    ]
