--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud_store_config.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud_store_config.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "On the high level it does the following:\n",
     "* retrieves latest release of cloud-storage-extension jar\n",
-    "* uploads it into [bucketfs](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm)\n",
+    "* uploads it into [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm)\n",
     "* registers UDF scripts for the cloud-storage-extension\n",
     "\n",
     "## Sandbox configuration "
