Add Bucketfs link to notebooks (#116)
* Add Bucketfs link

* Rest of links

* Update exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/cloud_store_config.ipynb

Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

* Update exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformer/translation.ipynb

Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

---------

Co-authored-by: Christoph Kuhnke <github@kuhnke.net>

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformer/translation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformer/translation.ipynb
@@ -79,7 +79,7 @@
     "\n",
     "To demonstrate the translation task we will use [Facebook WMT19 English-German model](https://huggingface.co/facebook/wmt19-en-de).\n",
     "\n",
-    "We need to load the model from the Huggingface hub into the BucketFS. This could potentially be a long process. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model."
+    "We need to load the model from the Huggingface hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model."
    ]
   },
   {
